--- a/camera-settings.html
+++ b/camera-settings.html
@@ -12,7 +12,6 @@
         <!-- Loading in Caman (finally!)-->
         <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/camanjs/4.1.2/caman.min.js"></script>
 
-
     </head>
 
     <body>
@@ -84,6 +83,8 @@
     </body>
     <br>
     <br>
-    <footer> Created by Abigail Leon -- January 2020 </footer>
-      
+    <footer> This website was created by Abigail Leon to fulfill 
+        the requirements of <a href="https://rpruim.github.io/D3/"> Math W82: Data Visualization with D3</a> 
+        at Calvin University, January 2020. 
+    </footer>
 </html>
